<resources>
    <string name="app_name">lalwani</string>
    <string name="action_settings">Settings</string>
    <string name="radio_btn_cop">Cop</string>
    <string name="radio_btn_hungry">Hungry</string>
    <string name="radio_btn_headache">Headache</string>
    <string name="radio_btn_about">About</string>
    <string name="btn_next">>></string>
    <string name="btn_prev">&lt;&lt;</string>
    <string name="btn_collect">Collect</string>
    <string name="btn_predict">Predict</string>
    <string name="txt_sampleID">Sample 1</string>
    <string name="txt_TruePos">TP: </string>
    <string name="txt_FalsePos">FP: </string>
</resources>
