<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_prev"
        app:layout_constraintStart_toEndOf="@+id/txtViewSampleId"
        app:layout_constraintTop_toBottomOf="@+id/stopButtonID" />

    <Button
        android:id="@+id/startButtonID"
        android:layout_width="71dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_collect"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopButtonID"
        android:layout_width="71dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#E91E63"
        android:text="@string/btn_predict"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/startButtonID"
        app:layout_constraintTop_toTopOf="parent" />


    <!--com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="355dp"
        android:layout_height="146dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_download_from_db" /-->

    <!--com.jjoe64.graphview.GraphView
        android:id="@+id/graphY"
        android:layout_width="354dp"
        android:layout_height="161dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph"
        app:layout_constraintVertical_bias="0.3" /-->

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="380dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphX"
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioBtnAbout" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphY"
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.439"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphX"
                app:layout_constraintVertical_bias="0.3" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphZ"
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.439"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphY"
                app:layout_constraintVertical_bias="0.3" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphGyroX"
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphZ" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphGyroY"
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.439"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphGyroX"
                app:layout_constraintVertical_bias="0.3" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphGyroZ"
                android:layout_width="370dp"
                android:layout_height="170dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.439"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphGyroY"
                app:layout_constraintVertical_bias="0.3" />
        </LinearLayout>
    </ScrollView>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="179dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/stopButtonID"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioBtnCop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_btn_cop"/>

        <RadioButton
            android:id="@+id/radioBtnHungry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_btn_hungry" />

        <RadioButton
            android:id="@+id/radioBtnHeadache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_btn_headache"/>
        
        <RadioButton
            android:id="@+id/radioBtnAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_btn_about" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtViewSampleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/txt_sampleID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButtonID" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_next"
        app:layout_constraintStart_toEndOf="@+id/btnPrev"
        app:layout_constraintTop_toBottomOf="@+id/stopButtonID" /><![CDATA[

    />

]]>
</androidx.constraintlayout.widget.ConstraintLayout >
